# Highlighter

./: pyproject.toml
highlighter/: __init__.py  highlighter.py
highlighter/Tests/: __init__.py
