[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "highlighter"
version = "0.1.0"
description = "Plot point mutations and APOBEC signatures for a multisequence alignment"
dependencies = ["biopython", "reportlab"]

[project.urls]
Homepage = "https://github.com/seth-borrowman/Highlighter"
Issues = "https://github.com/seth-borrowman/Highlighter/issues"

[tool.pytest.ini_options]
testpaths = ["highlighter/Tests"]
